fixed typo in inclusion of file-vieweres

--- a/emacs/config.org
+++ b/emacs/config.org
@@ -2902,7 +2902,7 @@ https://github.com/zachcurry/emacs-anywhere
 <<editing>>
 <<terminal-emulation>>
 <<completion>>
-<<file-viewing>>
+<<file-viewers>>
 <<programming>>
 <<org>>
 <<citations>>
