make it so org raises an error if noweb reference cannot be resolved

--- a/emacs/config.org
+++ b/emacs/config.org
@@ -35,6 +35,9 @@ As mentioned in the overview, we're going to take the following approach in main
 #+begin_src emacs-lisp :tangle init.el
 (require 'org)
 
+;; Raises an error if a noweb reference cannot be resolved.
+(setq org-babel-noweb-error-all-langs t)
+
 ;; A copy-paste from https://github.com/bzg/org-mode/blob/bd468136dd1a2172302b3ec980c5e6b6e327d683/lisp/org.el#L249-L279
 ;; but with the option of specifying the tangled file `file-out'.
 ;; Note that if blocks have specified a `:tangle' header, only those matching `file-out'
